Add examples for swagger doc and small fixes for it
