# api/swagger/swagger.yaml
@@ -2,59 +2,94 @@ definitions:
   v1.Chat:
     properties:
       id:
+        example: UUID
         type: string
       name:
+        example: Best chat name!
         type: string
     type: object
   v1.CreateChatRequest:
     properties:
       name:
+        example: Best chat name!
         type: string
+    required:
+    - name
     type: object
   v1.CreateChatResponse:
     properties:
       id:
+        example: UUID
         type: string
     type: object
   v1.CreateUserRequest:
     properties:
       email:
+        example: example@gmail.com
         type: string
       password:
+        example: secret1234!
         type: string
       username:
+        example: Username
         type: string
+    required:
+    - email
+    - password
+    - username
     type: object
   v1.CreateUserResponse:
     properties:
       id:
+        example: UUID
+        type: string
+    type: object
+  v1.HTTPError:
+    properties:
+      message:
+        example: error description
         type: string
     type: object
   v1.LoginUserRequest:
     properties:
       email:
+        example: example@gmail.com
         type: string
       password:
+        example: secret1234!
         type: string
+    required:
+    - email
+    - password
     type: object
   v1.LoginUserResponse:
     properties:
       token:
+        example: JWT token
         type: string
     type: object
   v1.Message:
     properties:
-      author:
+      author_id:
+        example: UUID
+        type: string
+      author_name:
+        example: Username
         type: string
       chat_id:
+        example: UUID
         type: string
       content:
+        example: Hello world!
         type: string
       created_at:
+        example: "2022-05-01T00:00:00Z"
         type: string
       id:
+        example: UUID
         type: string
       is_edited:
+        example: false
         type: boolean
     type: object
 info:
@@ -75,7 +110,7 @@ paths:
         "400":
           description: Bad Request
           schema:
-            type: object
+            $ref: '#/definitions/v1.HTTPError'
         "500":
           description: Internal Server Error
           schema:
@@ -86,7 +121,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Creates new chat, runs in background and returns chat ID
+      description: Creates new chat, runs it in background and returns chat ID
       parameters:
       - description: Chat name
         in: body
@@ -101,10 +136,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/v1.CreateChatResponse'
-        "400":
-          description: Bad Request
+        "422":
+          description: Unprocessable Entity
           schema:
-            type: object
+            $ref: '#/definitions/v1.HTTPError'
         "500":
           description: Internal Server Error
           schema:
@@ -156,7 +191,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            type: object
+            $ref: '#/definitions/v1.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.HTTPError'
         "500":
           description: Internal Server Error
           schema:
@@ -179,7 +218,7 @@ paths:
         "400":
           description: Bad Request
           schema:
-            type: object
+            $ref: '#/definitions/v1.HTTPError'
         "500":
           description: Internal Server Error
           schema:
@@ -207,7 +246,7 @@ paths:
         "422":
           description: Unprocessable Entity
           schema:
-            type: object
+            $ref: '#/definitions/v1.HTTPError'
         "500":
           description: Internal Server Error
           schema:
@@ -217,7 +256,7 @@ paths:
       - Users
   /api/v1/users/login:
     post:
-      description: Creates nes User, return his ID
+      description: Login User, returns token
       parameters:
       - description: User login data
         in: body
@@ -235,12 +274,12 @@ paths:
         "422":
           description: Unprocessable Entity
           schema:
-            type: object
+            $ref: '#/definitions/v1.HTTPError'
         "500":
           description: Internal Server Error
           schema:
             type: object
-      summary: Create New User
+      summary: Login User
       tags:
       - Users
 swagger: "2.0"
