# internal/controllers/http/rest/v1/models_users.go
@@ -1,20 +1,20 @@
 package v1
 
 type CreateUserRequest struct {
-	Username string `json:"username" validate:"required"`
-	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required"`
+	Username string `json:"username" example:"Username" validate:"required"`
+	Email    string `json:"email" example:"example@gmail.com" validate:"required,email"`
+	Password string `json:"password" example:"secret1234!" validate:"required"`
 }
 
 type LoginUserRequest struct {
-	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required"`
+	Email    string `json:"email" example:"example@gmail.com" validate:"required,email"`
+	Password string `json:"password" example:"secret1234!" validate:"required"`
 }
 
 type CreateUserResponse struct {
-	ID string `json:"id"`
+	ID string `json:"id" example:"UUID"`
 }
 
 type LoginUserResponse struct {
-	Token string `json:"token"`
+	Token string `json:"token" example:"JWT token"`
 }
